Changes in structure: added new files, MarketInvoice.js and Serializor.js; and deleted one file, entry.js.

--- a/DataVisual/Main.html
+++ b/DataVisual/Main.html
@@ -3,10 +3,11 @@
 <html>
 <head >
     <title></title>
+    <script src="Serializor.js"></script>
+    <script src="MarketInvoice.js"></script>
     <script src="Chart.js"></script>
     <script src="jquery-2.1.4.js"></script>
     <script src="dataVisual.js"></script>
-
     <!--<script src="abstraction.js"></script>-->
 </head>
 
